@@ -57,6 +57,7 @@ Unreleased Version 2.3.0-pre
  * Feature: Make compiling Drawpile with WebSocket support mandatory. This avoids accidentally ending up with an application that's unable to connect to certain servers.
  * Fix: Properly disable join button when an empty address is entered.
  * Feature: Allow explicitly picking between WebSockets and TCP sockets in the join, browser and host pages of the start dialog.
+ * Feature: Prefer connecting via WebSockets, fall back to TCP if it fails or takes too long. Connections to localhost or IP addresses continue to use TCP by default. Thanks Bluestrings for suggesting.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
